# HCIProj

./: .gitignore  .gitmodules  CMakeLists-examples.txt  CMakeLists.txt  README.md
res/: aGest.xml  fist.xml  left.xml  lpalm.xml  right.xml  rpalm.xml
src/: Application.cpp  Application.h  CursorController.cpp  CursorController.h  TrackingApplication.cpp  TrackingApplication.h  TrackingMode.h  main.cpp
